Fix inconsistent letter spacing in header

--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,10 @@ img {
 
 #button-text-fire,
 #button-text-grass,
-#button-text-water {
+#button-text-water,
+#title-fire,
+#title-grass,
+#title-water {
     letter-spacing: 0.7px;
 }
 
@@ -70,12 +73,16 @@ img {
     font-size: 50px;
     gap: 32px;
     justify-content: center;
-    margin-top: 32px;
-    margin-bottom: 88px;
+    margin-top: 48px;
+    margin-bottom: 92px;
 }
 
 #title-fire {
     text-shadow: 0px 8px rgb(50, 0, 0), 0px 16px rgb(25, 0, 0), 0px 22px rgb(0, 0, 0);
+}
+
+#title-fire .FI {
+    letter-spacing: -5.5px;
 }
 
 #title-grass {
